image link include

--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -54,7 +54,7 @@
     "\n",
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
-    "![Imagem Digital]()\n",
+    "![Imagem Digital](https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg)\n",
     "\n",
     "A função bidimensional f(x, y) representa a intensidade de um pixel em um determinado ponto."
    ]
