Edit link image

--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -36,9 +36,9 @@
     "\n",
     "Nesse sistema, cada símbolo em um número é chamado de bit, em vez de um dígito, e existem apenas dois valores para cada bit (0 e 1). Por exemplo, o número 13 em binário é representado da seguinte forma: 1101, na qual cada bit ativo (1) na representação é somado para obter o número decimal, o valor a ser somado em cada posição é obtido elevando a base 2 ao índice do bit da direita para esquerda,como mostra a tabela a seguir:\n",
     "\n",
-    "Posição | 3 | 2 | 1 | 0 |\n",
-    "-------:|---:|---:|---:|---:|\n",
-    "**Base** | 2³|2²|2¹|2⁰|\n",
+    "Posição  | 3 | 2 | 1 | 0 |\n",
+    "-------: |--:|--:|--:|--:|\n",
+    "**Base** | 2³| 2²| 2¹| 2⁰|\n",
     "\n",
     "13 = 2³ + 2² + 2⁰ = 1101 (bits)\n",
     "\n",
@@ -54,7 +54,10 @@
     "\n",
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
-    "![Imagem Digital](https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg)\n",
+    "<p align=\"center\">\n",
+    "  <img src=\"https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg\" height=\"350\" alt=\"Image Digital\"/>\n",
+    "</p>\n",
+    "Fonte: \n",
     "\n",
     "A função bidimensional f(x, y) representa a intensidade de um pixel em um determinado ponto."
    ]
