Edit link image

--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -57,6 +57,9 @@
     "<p align=\"center\">\n",
     "  <img src=\"https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg\" height=\"350\" alt=\"Image Digital\"/>\n",
     "</p>\n",
+    "\n",
+    "<img src=\"https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg\" align=\"right\" alt=\"\" width=\"300\"/>\n",
+    "\n",
     "Fonte: \n",
     "\n",
     "A função bidimensional f(x, y) representa a intensidade de um pixel em um determinado ponto."
