--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -55,10 +55,10 @@
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
     "<p align=\"center\">\n",
-    "  <img src=\"https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg\" height=\"350\" alt=\"Image Digital\"/>\n",
+    "  <img src=\"figures/intensidade_pixel.jpg\" height=\"350\" alt=\"Image Digital\"/>\n",
     "</p>\n",
     "\n",
-    "<img src=\"https://github.com/Brilhador/computer-vision-in-practice/blob/master/figures/intensidade_pixel.jpg\" align=\"right\" alt=\"\" width=\"300\"/>\n",
+    "<img src=\"figures/intensidade_pixel.jpg\" align=\"right\" alt=\"\" width=\"300\"/>\n",
     "\n",
     "Fonte: \n",
     "\n",
