--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -54,18 +54,10 @@
     "\n",
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
-<<<<<<< HEAD
-    "<html>\n",
+    "html\n",
     "<img src=\"figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"300\"/>\n",
-=======
-    "<p align=\"center\">\n",
-    "  <img src=\"figures/intensidade_pixel.jpg\" height=\"350\" alt=\"Image Digital\"/>\n",
-    "</p>\n",
     "\n",
-    "<img src=\"figures/intensidade_pixel.jpg\" align=\"right\" alt=\"\" width=\"300\"/>\n",
->>>>>>> abb61d1b28cc4dd892d2df6861ee4a7986e8193f
-    "\n",
-    "Fonte: \n",
+    "Fonte: Brilhador, A. \n",
     "\n",
     "A função bidimensional f(x, y) representa a intensidade de um pixel em um determinado ponto."
    ]
