--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -55,7 +55,7 @@
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
     "html\n",
-    "<img src=\"figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"300\"/>\n",
+    "<img src=\"./figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"300\"/>\n",
     "\n",
     "Fonte: Brilhador, A. \n",
     "\n",
