--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -56,6 +56,7 @@
     "\n",
     "html\n",
     "<img src=\"intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"300\"/>\n",
+    "<img src=\"intensidade_pixel.jpg\" align=\"center\" alt=\"\"/>\n",
     "\n",
     "Fonte: Brilhador, A. \n",
     "\n",
