--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -56,7 +56,7 @@
     "\n",
     "html\n",
     "<img src=\"intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"300\"/>\n",
-    "<img src=\"intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"90\%\"/>\n",
+    "<img src=\"intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"90%\"/>\n",
     "\n",
     "Fonte: Brilhador, A. \n",
     "\n",
