remove html tag

--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Posição  | 3 | 2 | 1 | 0 |\n",
     "-------: |--:|--:|--:|--:|\n",
-    "**Base** | 2³| 2²| 2¹| 2⁰\n",
+    "**Base** | 2³| 2²| 2¹| 2⁰|\n",
     "\n",
     "13 = 2³ + 2² + 2⁰ = 1101 (bits)\n",
     "\n",
@@ -54,8 +54,7 @@
     "\n",
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
-    "html\n",
-    "<img src=\"../figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"75%\"/>\n",
+    "![title](../figures/intensidade_pixel.jpg)\n",
     "\n",
     "Fonte: Brilhador, A. \n",
     "\n",
