link image solved

--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -54,8 +54,8 @@
     "\n",
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
-    "![title](../figures/intensidade_pixel.jpg)\n",
     "\n",
+    "<img src=\"../figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"75%\"/>\n",
     "Fonte: Brilhador, A. \n",
     "\n",
     "A função bidimensional f(x, y) representa a intensidade de um pixel em um determinado ponto."
