link image solved

--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -38,7 +38,7 @@
     "\n",
     "Posição  | 3 | 2 | 1 | 0 |\n",
     "-------: |--:|--:|--:|--:|\n",
-    "**Base** | 2³| 2²| 2¹| 2⁰|\n",
+    "**Base** | 2³| 2²| 2¹| 2⁰\n",
     "\n",
     "13 = 2³ + 2² + 2⁰ = 1101 (bits)\n",
     "\n",
