--- a/image-processing/open-image.ipynb
+++ b/image-processing/open-image.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "### Conteúdo:\n",
     "1. Noções básicas de imagens digitais\n",
-    "2. \n",
+    "2. Operações básicas em Python\n",
     "\n",
     "### Questões:\n",
     "1.    "
@@ -26,8 +26,13 @@
     "\n",
     "As imagens visualizadas em dispositivos eletrônicos ou processadas em programas são representadas e armazenadas no computador por meio de abstrações númericas, que simulam a visão humana do mundo real.\n",
     "\n",
-    "Antes de aprender a realizar o processamento de imagens com python é necessários dedicar algum tempo para entender como essas abstrações funcionam.\n",
-    "    \n",
+    "Antes de aprender a realizar o processamento de imagens com python é necessários dedicar algum tempo para entender como essas abstrações funcionam."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "####    1.1 Definição dos termos bit e byte\n",
     "\n",
     "Antes de abordar, especificamente, o assunto sobre imagens digitais, é preciso entender como os números são armazenados em um computador. \n",
@@ -43,13 +48,24 @@
     "13 = 2³ + 2² + 2⁰ = 1101 (bits)\n",
     "\n",
     "Internamente, os computadores têm um número mínimo de bits com os quais trabalham em um determinado momento: oito. Um grupo de oito bits é chamado de **byte**.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1.2    Pixels\n",
     "\n",
     "As imagens digitais são armazenadas como matrizes retangulares de centenas, milhares ou milhões de \"elementos de imagem\" discretos, também conhecidos como pixels. Cada pixel representa um nível de intensidade de luz colorida.\n",
     "\n",
-    "O nível de intensidade de um pixel, geralmente, é representado por 8 bits, podendo variar entre 0 e 255.\n",
-    "\n",
+    "O nível de intensidade de um pixel, geralmente, é representado por 8 bits, podendo variar entre 0 e 255."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### 1.3    Sistema de Coordenadas\n",
     "\n",
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
@@ -65,7 +81,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Importação da bibliotecas do OpenCV"
+    "####    1.4 Modelo de Cor\n",
+    "\n",
+    "Os modelos de cores permitem que imagens digitais apresentem um ampla variedade de cores a partir de um pequeno conjunto de cores primárias. Apresar de existirem vários modelos de cores diferentes, o mais comum é o modelo RGB (red, green e blue).\n",
+    "\n",
+    "O modelo RGB é um modelo de cores aditivo, o que significa que as cores primárias são misturadas para formar outras cores. Geralmente, as cores primárias são denominadas de canais, na qual canal representa uma quantidade de cor primária em um intervalo de 0 à 255, ou seja, existem 256 valores possível para cada canal de cor. Este valor é obtido pelo número de bits usados para armazenar o valor do canal de cores, no caso de 256 possibilitades são utilizados 8 bits. Como o modelo RGB possui três canais (vermelho, verde e azul), é dito que a profundidade de cores é de 24 bits (8 para cada canal).\n",
+    "\n",
+    "Qualquer cor específica no modelo RGB pode ser definida por um trio de números inteiros entre 0 e 255. Quanto maior o valor de um canal, maior será presença daquela cor na mistura final dos canais."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 1.5 Imagem Digital em Tons de Cinza\n",
+    "\n",
+    "Uma imagem digital em tons de cinza é uma imagem que possui apenas um canal de cor. Os valores podem varia de 0 à 255, na qual 0 representa a cor preta (ou ausência de cor) e 255 a cor branca (ou junção de todas as cores)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Operações básicas em Python"
    ]
   },
   {
