Include logo figure

--- a/image-processing/01-image-basics.ipynb
+++ b/image-processing/01-image-basics.ipynb
@@ -444,7 +444,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O código acima salta a cada 10 pixels ao percorrer as linhas e colunas da imagem. A cada salto é criado um quadrado amarelo de 5x5 pixels. Desta vez parte da imagem original é preservada e podemos ainda observar o gato por baixo da grade de quadrados amarelos."
+    "O código acima salta a cada 10 pixels ao percorrer as linhas e colunas da imagem. A cada salto é criado um quadrado rosa de 5x5 pixels. Desta vez parte da imagem original é preservada e podemos ainda observar o gato por baixo da grade de quadrados rosas."
    ]
   },
   {
@@ -462,9 +462,9 @@
     "\n",
     "- Brilhador, A. (2015). Análise semi-automática do arranjo espacial de plantas de milho utilizando visão computacional (Master's thesis, Universidade Tecnológica Federal do Paraná).\n",
     "\n",
-    "- https://datacarpentry.org/image-processing/02-image-basics/index.html\n",
+    "- Lições para pesquisadores de Data Carpentry (https://datacarpentry.org/image-processing/02-image-basics/index.html).\n",
     "\n",
-    "- A imagem gato.jpg foi obtido do site pixabay.com e possuí licença de domínio público."
+    "- A imagem gato.jpg foi obtida do site pixabay.com e possuí licença de domínio público."
    ]
   },
   {
