init-image-transformations

--- a/image-processing/01-image-basics.ipynb
+++ b/image-processing/01-image-basics.ipynb
@@ -75,8 +75,7 @@
     "Para acessar os pixels de uma imagem digital é utilizado um sistema de coordenadas cartesiano modificado. Este sistema modificado permite apenas valores positivos de coordenadas e possui apenas dois eixos x (horizontal) e y (vertical-invertido), como pode ser observado na figura abaixo:\n",
     "\n",
     "\n",
-    "<img src=\"../figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"75%\"/>\n",
-    "Fonte: Brilhador, A. (2015).\n",
+    "<img src=\"../figures/intensidade_pixel.jpg\" align=\"center\" alt=\"\" width=\"70%\"/>\n",
     "\n",
     "A função bidimensional f(x, y) representa a intensidade de um pixel em um determinado ponto."
    ]
@@ -185,6 +184,13 @@
    "source": [
     "# Importação da biblioteca matplotlib\n",
     "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A biblioteca Matplotlib é biblioteca de plotagem para Python, que oferece uma grande variedade de métodos de plotagem."
    ]
   },
   {
@@ -441,20 +447,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "O código acima salta a cada 10 pixels ao percorrer as linhas e colunas da imagem. A cada salto é criado um quadrado rosa de 5x5 pixels. Desta vez parte da imagem original é preservada e podemos ainda observar o gato por baixo da grade de quadrados rosas."
+    "O código acima salta a cada 10 pixels ao percorrer as linhas e colunas da imagem. A cada salto é criado um quadrado rosa de 5x5 pixels. Desta vez parte da imagem original é preservada e podemos ainda observar o gato por baixo da grade de quadrados rosas.\n",
+    "\n",
+    "**Observação**: Os quadrados rosas são gerados acessandos os pixels por meio de fatiamento (*slicing*) definido pelo intervalo y:y+5 e x:x+5."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Apoio"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Apoio\n",
+    "\n",
     "Universidade Tecnólogica Federal do Paraná - UTFPR"
    ]
   },
@@ -462,13 +465,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Referências"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Referências\n",
+    "\n",
+    "- Documentação do OpenCV (https://opencv-python-tutroals.readthedocs.io/en/latest/py_tutorials/py_gui/py_image_display/py_image_display.html)\n",
+    "\n",
     "- Antonello, R. (2014). Introdução a Visão Computacional com Python e OpenCV. Engenharia de Controle e Automação do Instituto Federal Catarinense–IFC, campus Luzerna.\n",
     "\n",
     "- Brilhador, A. (2015). Análise semi-automática do arranjo espacial de plantas de milho utilizando visão computacional (Master's thesis, Universidade Tecnológica Federal do Paraná).\n",
@@ -477,6 +477,13 @@
     "\n",
     "- A imagem gato.jpg foi obtida do site pixabay.com e possuí licença de domínio público."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
