include quesiton transformation

--- a/image-processing/questions/02-image-transformations-questions.ipynb
+++ b/image-processing/questions/02-image-transformations-questions.ipynb
@@ -24,6 +24,27 @@
     "# Questões\n",
     "--- "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Abra a imagem televisao.jpg e recorte a televisão presente na imagem removendo sua base. Depois inverta a imagem horizontalmente. Dica: a televisão tem cerca de 190 pixels de altura e 270 pixels de largura."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Redimensione a imagem gato.jpg para 190 pixels de altura e 268 pixels de largura e misture com a imagem da televisão recortada de forma que o gato apareça dentro da tela da tv. Dica: crie uma máscara retangular com o tamanho da tela."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
