change questions blurring

--- a/image-processing/questions/04.image-blurring-questions.ipynb
+++ b/image-processing/questions/04.image-blurring-questions.ipynb
@@ -117,15 +117,16 @@
     "imagem = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "# aplicando o ruído gaussiano\n",
-    "mean = 0.3\n",
-    "var = 0.7\n",
+    "mean = 0.1\n",
+    "var = 1\n",
     "sigma = var ** 0.5\n",
     "\n",
     "imagem = imagem / 255.0\n",
     "ruido_gaussiano = np.random.normal(mean, sigma, imagem.shape)\n",
-    "ruido_gaussiano = ruido_gaussiano.reshape(imagem.shape[0], imagem.shape[1]).astype(\"uint8\")\n",
-    "\n",
     "imagem_ruido_gaussiano = np.clip((imagem * (1 + ruido_gaussiano * 0.2)),0,1)\n",
+    "\n",
+    "# convertendo a imagem para 8bits e valores de pixels entre 0 e 255\n",
+    "imagem_ruido_gaussiano = (imagem_ruido_gaussiano * 255).astype(\"uint8\")\n",
     "\n",
     "# mostrando a imagem do ruido\n",
     "plt.imshow(imagem_ruido_gaussiano, cmap='gray')"
