include edge questions

--- a/image-processing/c-questions solved/05-image-thresholding-solved.ipynb
+++ b/image-processing/c-questions solved/05-image-thresholding-solved.ipynb
@@ -131,7 +131,7 @@
    "source": [
     "# abrindo a imagem\n",
     "imagem = cv2.imread('../../figures/bandeiras.jpg')\n",
-    "# converte imagem para modelo de cor RGB\n",
+    "# converte imagem para tons de cinza\n",
     "imagem = cv2.cvtColor(imagem, cv2.COLOR_BGR2GRAY)\n",
     "\n",
     "# limiarizando a imagem com o valor de corte igual 50\n",
