lessons and times

--- a/image-processing/a-lesson/01-image-basics.ipynb
+++ b/image-processing/a-lesson/01-image-basics.ipynb
@@ -9,7 +9,6 @@
     "# Visão Geral\n",
     "\n",
     "- Leitura: 30 min\n",
-    "- Exercícios: 15 min \n",
     "\n",
     "### Requisitos:\n",
     "- Conhecidos básicos da linguagem Python\n",
@@ -475,8 +474,15 @@
     "\n",
     "- Lições para pesquisadores de Data Carpentry (https://datacarpentry.org/image-processing/02-image-basics/index.html).\n",
     "\n",
-    "- A imagem gato.jpg foi obtida do site pixabay.com e possuí licença de domínio público."
+    "- Todas imagens usadas neste projeto foram obtidas do site pixabay.com com licença de domínio público ou foram obtidas das referências descritas nas lições."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
