--- a/image-processing/b-questions/02-image-transformations-questions.ipynb
+++ b/image-processing/b-questions/02-image-transformations-questions.ipynb
@@ -8,10 +8,11 @@
     "\n",
     "# Visão Geral\n",
     "\n",
-    "- Exercícios: 15 min \n",
+    "- Exercícios: 30 min \n",
     "\n",
     "### Requisitos:\n",
     "- Conhecidos básicos da linguagem Python\n",
+    "- Leitura da lição de noções básicas de imagens digitais\n",
     "- Leitura da lição de Transformações de imagens digitais e Operações aritméticas em imagens digitais\n",
     "\n",
     "---------------------------"
