--- a/image-processing/b-questions/06-image-edge-questions.ipynb
+++ b/image-processing/b-questions/06-image-edge-questions.ipynb
@@ -8,10 +8,14 @@
     "\n",
     "# Visão Geral\n",
     "\n",
-    "- Exercícios: 15 min \n",
+    "- Exercícios: 60 min \n",
     "\n",
     "### Requisitos:\n",
     "- Conhecidos básicos da linguagem Python\n",
+    "- Leitura da lição de noções básicas de imagens digitais\n",
+    "- Leitura da lição de Transformações de imagens digitais e Operações aritméticas em imagens digitais\n",
+    "- Leitura da lição de Suavização de imagens digitais\n",
+    "- Leitura da lição de Binarização com Limiar\n",
     "- Leitura da lição de Detecção de bordas\n",
     "\n",
     "---------------------------"
