--- a/image-processing/a-lesson/03-image-histograms.ipynb
+++ b/image-processing/a-lesson/03-image-histograms.ipynb
@@ -9,7 +9,6 @@
     "# Visão Geral\n",
     "\n",
     "- Leitura: 30 min\n",
-    "- Exercícios: 15 min \n",
     "\n",
     "### Requisitos:\n",
     "- Conhecidos básicos da linguagem Python\n",
@@ -415,8 +414,15 @@
     "\n",
     "- Antonello, R. (2014). Introdução a Visão Computacional com Python e OpenCV. Engenharia de Controle e Automação do Instituto Federal Catarinense–IFC, campus Luzerna.\n",
     "\n",
-    "- A imagem gato.jpg foi obtida do site pixabay.com e possuí licença de domínio público."
+    "- Todas imagens usadas neste projeto foram obtidas do site pixabay.com com licença de domínio público ou foram obtidas das referências descritas nas lições."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
