--- a/image-processing/c-questions solved/03-image-histogram-solved.ipynb
+++ b/image-processing/c-questions solved/03-image-histogram-solved.ipynb
@@ -12,6 +12,8 @@
     "\n",
     "### Requisitos:\n",
     "- Conhecidos básicos da linguagem Python\n",
+    "- Leitura da lição de noções básicas de imagens digitais\n",
+    "- Leitura da lição de Transformações de imagens digitais e Operações aritméticas em imagens digitais\n",
     "- Leitura da lição de Histogramas\n",
     "\n",
     "---------------------------"
