--- a/image-processing/a-lesson/06-image-edge-detection.ipynb
+++ b/image-processing/a-lesson/06-image-edge-detection.ipynb
@@ -11,7 +11,8 @@
     "- Leitura: 30 min\n",
     "\n",
     "### Requisitos:\n",
-    "- Conhecidos básicos da linguagem Python\n",
+    "- Conhecimentos básicos da linguagem Python\n",
+    "- Conhecimentos básicos em Notebook Jupyter\n",
     "\n",
     "### Conteúdo:\n",
     "1. Detecção de bordas\n",
