--- a/image-processing/b-questions/03-image-histogram-questions.ipynb
+++ b/image-processing/b-questions/03-image-histogram-questions.ipynb
@@ -11,7 +11,8 @@
     "- Exercícios: 15 min \n",
     "\n",
     "### Requisitos:\n",
-    "- Conhecidos básicos da linguagem Python\n",
+    "- Conhecimentos básicos da linguagem Python\n",
+    "- Conhecimentos básicos em Notebook Jupyter\n",
     "- Leitura da lição de noções básicas de imagens digitais\n",
     "- Leitura da lição de Transformações de imagens digitais e Operações aritméticas em imagens digitais\n",
     "- Leitura da lição de Histogramas\n",
