--- a/image-processing/c-questions solved/06-image-edge-solved.ipynb
+++ b/image-processing/c-questions solved/06-image-edge-solved.ipynb
@@ -11,7 +11,8 @@
     "- Exercícios: 60 min \n",
     "\n",
     "### Requisitos:\n",
-    "- Conhecidos básicos da linguagem Python\n",
+    "- Conhecimentos básicos da linguagem Python\n",
+    "- Conhecimentos básicos em Notebook Jupyter\n",
     "- Leitura da lição de noções básicas de imagens digitais\n",
     "- Leitura da lição de Transformações de imagens digitais e Operações aritméticas em imagens digitais\n",
     "- Leitura da lição de Suavização de imagens digitais\n",
