--- a/image-processing/challenge/01-white-flies.ipynb
+++ b/image-processing/challenge/01-white-flies.ipynb
@@ -28,9 +28,9 @@
     "\n",
     "Artigo de referência: https://sol.sbc.org.br/index.php/erigo/article/view/9095/8997\n",
     "\n",
-    "![](../../figures/moscas1.jpg)\n",
-    "![](../../figures/moscas2.jpg)\n",
-    "![](../../figures/moscas3.jpg)"
+    "![moscas1.jpg](../../figures/moscas1.jpg)\n",
+    "![moscas2.jpg](../../figures/moscas2.jpg)\n",
+    "![moscas3.jpg](../../figures/moscas3.jpg)"
    ]
   },
   {
